# host-bridge-mcp

./: .gitignore  Cargo.toml  README.md  host-bridge.toml  host-bridge.yaml
.github/ci/: package-release.sh  setup-zigbuild-darwin.sh
.github/workflows/: build-artifacts.yml  release.yml  unit-tests.yml
src/: cli.rs  config.rs  main.rs
src/application/: command_parser.rs  config_reload.rs  data_dir.rs  execution_service.rs  mod.rs  operator_console.rs  shutdown_controller.rs
src/application/execution_service/: runner.rs  tests.rs
src/application/operator_console/: approvals.rs  log_store.rs  sanitize.rs
src/config/: tests.rs
src/domain/: execution_target.rs  mod.rs  path_mapping.rs  policy.rs  ssh.rs
src/domain/platform/: mod.rs  runtime.rs  signal.rs  spawn.rs
src/domain/ssh/: command.rs  connection_pool.rs
src/transport/: mcp_streamable_http.rs  mod.rs  tui.rs
src/transport/mcp_streamable_http/: auth.rs  output.rs  streaming.rs  tooling.rs
src/transport/tui/: input.rs  render.rs  state.rs  terminal.rs
