[package]
name = "host-bridge-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "macros"] }
crossterm = "0.29.0"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
rmcp = { version = "1.2.0", features = ["server", "macros", "transport-streamable-http-server", "elicitation"] }
russh = { version = "0.56.0", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_saphyr = { package = "serde-saphyr", version = "0.0.21" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "process", "rt-multi-thread", "io-util", "sync", "fs", "time", "net", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
